# web-server

./: .gitignore  README.md  docker-compose.yaml  entrypoint.sh  env_sample  pyproject.toml  pytest.ini  rapidoc.Dockerfile  web.Dockerfile
.github/workflows/: cd.yaml  ci.yaml  cinew.yaml  linter.yaml
scripts/: export-schema.sh  run-rapidoc.sh  schema-diffs.sh
src/: manage.py
src/apps/achievements/: admin.py  models.py
src/apps/achievements/migrations/: 0001_initial.py  0001_squashed_0002_alter_achievement_options.py
src/apps/api_auth/api/: urls.py
src/apps/base/: admin.py  consts.py  models.py
src/apps/base/api/: mixins.py  serializers.py  urls.py  views.py
src/apps/base/migrations/: 0001_initial.py  0002_initial.py
src/apps/base/tests/: __init__.py  test_image_upload.py
src/apps/courses/: admin.py  models.py
src/apps/courses/api/: serializers.py  views.py
src/apps/courses/migrations/: 0001_initial.py
src/apps/locations/: admin.py  models.py
src/apps/locations/migrations/: 0001_initial.py
src/apps/organization/: apps.py  models.py
src/apps/organization/migrations/: 0001_initial.py
src/apps/organizations/: consts.py  models.py
src/apps/organizations/migrations/: 0001_initial.py
src/apps/resume/: admin.py  models.py
src/apps/resume/api/: filters.py  serialezers.py  views.py
src/apps/resume/migrations/: 0001_initial.py  0002_delete_studyprogramming_and_more.py  0003_alter_language_options_alter_resume_options_and_more.py  0003_country_alter_language_options_alter_resume_options_and_more.py
src/apps/users/: admin.py  apps.py  baker_recipes.py  consts.py  models.py  signals.py
src/apps/users/api/: permissions.py  serializers.py  utils.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_user_email_notifications_user_profile_photo_and_more.py  0002_user_github_user_role.py  0003_alter_user_role.py  0003_profile_profile_profile_user_organization_constraint.py  0003_remove_user_id_alter_user_uuid.py  0004_remove_user_github_user_github_link.py  0004_rename_uuid_user_id.py  0005_alter_user_options_user_phone_user_type_and_more.py  0005_user_achievement.py  0006_alter_user_phone_alter_user_type.py  0007_user_followers.py
src/apps/users/models/: users.py  (+2 more)
src/task_book/: asgi.py  settings.py  urls.py  wsgi.py
src/upstudy/: asgi.py  settings.py  settings_test.py  spectacular_settings.py  urls.py  wsgi.py
(+6 files in other folders)
