[tool.poetry]
name = "task-book-be"
version = "0.1.0"
description = ""
authors = ["RG1ee <niwows@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
