[tool.poetry]
name = "upstudy"
version = "0.1.0"
description = ""
authors = ["shaggy-axel <ruslan@kortechs.io>", "RG1ee <niwows@yandex.ru>"]

packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
python-dotenv = "^0.20.0"
django-extensions = "^3.2.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
upstudy = "src.manage:main"
